<resources>
    <string name="app_name">Best Before App</string>
    <string name="item_list_item_id">#</string>
    <string name="item_list_item_name">Product</string>
    <string name="item_list_item_qty">Qty</string>
    <string name="item_list_item_price">Expiry Date</string>
    <string name="title_item_detail">Product Detail</string>
    <string name="item_detail_item_price">Expiry Date</string>
    <string name="item_detail_item_qty">Quantity</string>
    <string name="item_detail_modify_qoh">Change Quantity</string>
    <string name="item_detail_quantity_add">+</string>
    <string name="item_detail_quantity_remove">-</string>
    <string name="item_detail_delete">Delete Product</string>
    <string name="title_item_data_entry">Add Product</string>
    <string name="item_detail_data_entry_title">Add new Product</string>
    <string name="item_detail_data_entry_cancel">Cancel</string>
    <string name="item_detail_data_entry_save">Save</string>
    <string name="item_detail_data_entry_item_name">Product Name</string>
    <string name="item_detail_data_entry_item_qty">Quantity</string>
    <string name="item_detail_data_entry_item_expiryDate">Expiry Date</string>
    <string name="appbar_scrolling_view_behavior"> </string>
    <string name="item_detail_data_entry_item_barcode"> Barcode</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Best Before - Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in online</string>
    <string name="action_offline">Use it offline</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
